# apibara-rust-sdk

./: cargo.toml
apibara/: Cargo.toml  tmp
apibara/src/: client.rs  main.rs
protos/: Cargo.toml  build.rs
protos/src/: lib.rs
